--- a/source/_posts/白桃露露.md
+++ b/source/_posts/白桃露露.md
@@ -22,8 +22,9 @@ categories: 福利
 
 ![](https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683071079.b910c08gn.jpg)
 
+#  我的博客 
 
+##  美观的视频播放器
 
-![](https://cdn.img2ipfs.com/ipfs/QmXXuvFomwp2G81vqGSiJDDkeDiH9p64cD15wEu1X1Zr2j?filename=20250218225612817.mp4)
+<iframe src="https://cdn.img2ipfs.com/ipfs/QmXXuvFomwp2G81vqGSiJDDkeDiH9p64cD15wEu1X1Zr2j?filename=20250218225612817.mp4" width="800" height="450" frameborder="0" allowfullscreen></iframe>
 
-<video src="https://cdn.img2ipfs.com/ipfs/QmXXuvFomwp2G81vqGSiJDDkeDiH9p64cD15wEu1X1Zr2j?filename=20250218225612817.mp4"controls></video>
