--- a/source/_posts/白桃露露.md
+++ b/source/_posts/白桃露露.md
@@ -20,11 +20,16 @@ categories: 福利
 
 ![](https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683049094.60udbwulzq.jpg)
 
-![](https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683071079.b910c08gn.jpg)
+{% image https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683071079.b910c08gn.jpg"图片描述" class:"responsive-image" data-type:"portrait" %}
 
-#  我的博客 
+#  我的博客
 
 ##  美观的视频播放器
 
-<iframe src="https://cdn.img2ipfs.com/ipfs/QmXXuvFomwp2G81vqGSiJDDkeDiH9p64cD15wEu1X1Zr2j?filename=20250218225612817.mp4" width="600" height="450" frameborder="0" allowfullscreen></iframe>
+<!-- 视频示例 -->
+<div class="video-wrapper">
+  <iframe src="https://holcc-cdn.haier.net/lemc/aliyun2/20250218/24231b38d28d470cb7d9a6e1cf2819f5.mp4" allowfullscreen=1></iframe>
+</div>
+
+
 
