--- a/source/_posts/分享壁纸(三).md
+++ b/source/_posts/分享壁纸(三).md
@@ -9,27 +9,27 @@ categories: 壁纸
 ---
 
 ##  人物(二)
-![](https://pic.netbian.com/uploads/allimg/220116/222845-164234332589a9.jpg)
+<img src="https://pic.netbian.com/uploads/allimg/220116/222845-164234332589a9.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://pic.netbian.com/uploads/allimg/220116/222845-164234332589a9.jpg"  data-type="auto">
 
 
 
 <!--more-->
-![](https://pic.3gbizhi.com/2021/1105/thumb_1680_0_20211105063648584.jpg)
+<img src="https://pic.3gbizhi.com/2021/1105/thumb_1680_0_20211105063648584.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://pic.3gbizhi.com/2021/1105/thumb_1680_0_20211105063648584.jpg"  data-type="auto">
 
 <img src="https://pic.netbian.com/uploads/allimg/220814/231950-1660490390ca06.jpg" style="zoom:70%;" />
 
-![](https://pic.netbian.com/uploads/allimg/220618/002627-1655483187f639.jpg)
+<img src="https://pic.netbian.com/uploads/allimg/220618/002627-1655483187f639.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://pic.netbian.com/uploads/allimg/220618/002627-1655483187f639.jpg"  data-type="auto">
 
-![](https://pic.netbian.com/uploads/allimg/220629/224839-1656514119b359.jpg)
+<img src="https://pic.netbian.com/uploads/allimg/220629/224839-1656514119b359.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://pic.netbian.com/uploads/allimg/220629/224839-1656514119b359.jpg"  data-type="auto">
 
-![](https://pic.netbian.com/uploads/allimg/220902/224030-1662129630e481.jpg)
-![](https://pic.3gbizhi.com/2020/1102/thumb_1680_0_20201102115703732.jpg)
+<img src="https://pic.netbian.com/uploads/allimg/220902/224030-1662129630e481.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://pic.netbian.com/uploads/allimg/220902/224030-1662129630e481.jpg"  data-type="auto">
+<img src="https://pic.3gbizhi.com/2020/1102/thumb_1680_0_20201102115703732.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://pic.3gbizhi.com/2020/1102/thumb_1680_0_20201102115703732.jpg"  data-type="auto">
 
-![](https://www.cgwallpapers.com/img_script/wallpaper_dir/img.php?src=wallpaper_ruan_jia_19_2560x1440.jpg&height=450&width=800&fill-to-fit&sharpen)
+<img src="https://www.cgwallpapers.com/img_script/wallpaper_dir/img.php?src=wallpaper_ruan_jia_19_2560x1440.jpg&height=450&width=800&fill-to-fit&sharpen"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://www.cgwallpapers.com/img_script/wallpaper_dir/img.php?src=wallpaper_ruan_jia_19_2560x1440.jpg&height=450&width=800&fill-to-fit&sharpen"  data-type="auto">
 
-![](https://www.cgwallpapers.com/img_script/wallpaper_dir/img.php?src=wallpaper_wlop__19_2560x1440.jpg&height=450&width=800&fill-to-fit&sharpen)
+<img src="https://www.cgwallpapers.com/img_script/wallpaper_dir/img.php?src=wallpaper_wlop__19_2560x1440.jpg&height=450&width=800&fill-to-fit&sharpen"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://www.cgwallpapers.com/img_script/wallpaper_dir/img.php?src=wallpaper_wlop__19_2560x1440.jpg&height=450&width=800&fill-to-fit&sharpen"  data-type="auto">
 
-![](https://www.cgwallpapers.com/img_script/wallpaper_dir/img.php?src=wallpaper_chen_bo_30_2560x1440.jpg&height=450&width=800&fill-to-fit&sharpen)
+<img src="https://www.cgwallpapers.com/img_script/wallpaper_dir/img.php?src=wallpaper_chen_bo_30_2560x1440.jpg&height=450&width=800&fill-to-fit&sharpen"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://www.cgwallpapers.com/img_script/wallpaper_dir/img.php?src=wallpaper_chen_bo_30_2560x1440.jpg&height=450&width=800&fill-to-fit&sharpen"  data-type="auto">
 
 ## 注：（以上图来自[电脑桌面壁纸大全3g壁纸 ](https://desk.3gbizhi.com/)和[cgwallpapers](https://www.cgwallpapers.com/))
 
