--- a/source/_posts/分享壁纸(二).md
+++ b/source/_posts/分享壁纸(二).md
@@ -10,7 +10,7 @@ categories: 壁纸
 
 ##  人物
 
-![](https://w.wallhaven.cc/full/j3/wallhaven-j3mk8y.jpg)
+<img src="https://w.wallhaven.cc/full/j3/wallhaven-j3mk8y.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://w.wallhaven.cc/full/j3/wallhaven-j3mk8y.jpg"  data-type="auto">
 
 <!--more-->
 <img src="https://w.wallhaven.cc/full/8o/wallhaven-8ozl91.png" style="zoom:70%;" />
@@ -19,15 +19,15 @@ categories: 壁纸
 
 <img src="https://w.wallhaven.cc/full/72/wallhaven-72yo3e.jpg" style="zoom:70%;" />
 
-![](https://w.wallhaven.cc/full/z8/wallhaven-z8lpww.jpg)
+<img src="https://w.wallhaven.cc/full/z8/wallhaven-z8lpww.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://w.wallhaven.cc/full/z8/wallhaven-z8lpww.jpg"  data-type="auto">
 
-![](https://w.wallhaven.cc/full/v9/wallhaven-v9w3v3.jpg)
+<img src="https://w.wallhaven.cc/full/v9/wallhaven-v9w3v3.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://w.wallhaven.cc/full/v9/wallhaven-v9w3v3.jpg"  data-type="auto">
 
-![](https://w.wallhaven.cc/full/m9/wallhaven-m9xlmy.jpg)
+<img src="https://w.wallhaven.cc/full/m9/wallhaven-m9xlmy.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://w.wallhaven.cc/full/m9/wallhaven-m9xlmy.jpg"  data-type="auto">
 
-![](https://w.wallhaven.cc/full/57/wallhaven-572k81.png)
+<img src="https://w.wallhaven.cc/full/57/wallhaven-572k81.png"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://w.wallhaven.cc/full/57/wallhaven-572k81.png"  data-type="auto">
 
-![](https://w.wallhaven.cc/full/72/wallhaven-72y2zo.jpg)
+<img src="https://w.wallhaven.cc/full/72/wallhaven-72y2zo.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://w.wallhaven.cc/full/72/wallhaven-72y2zo.jpg"  data-type="auto">
 
 <img src="https://w.wallhaven.cc/full/1k/wallhaven-1k9k83.png" style="zoom:50%;" />
 ## 注：（以上图均来自[wallhaven](https://wallhaven.cc)）
