--- a/source/_posts/白桃露露.md
+++ b/source/_posts/白桃露露.md
@@ -2,6 +2,7 @@
 title: 白桃露露
 date: 2025-02-16 13:29:13
 tags: 福利
+hidden: true
 comments: 
 password: 123456
 top: 0
@@ -11,28 +12,40 @@ categories: 福利
 
 #  福利姬：白桃露露
 
-![](https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683035808.9kgb1pxbrn.jpg)
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683035808.9kgb1pxbrn.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683035808.9kgb1pxbrn.jpg"  data-type="auto">
 
-![](https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683013678.4ub23b5pe9.jpg)
+<!--more-->
 
-![](https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739682983165.45t4we30s.jpg)
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683013678.4ub23b5pe9.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683013678.4ub23b5pe9.jpg"  data-type="auto">
 
-![](https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683002671.2rv9f974cu.jpg)
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739682983165.45t4we30s.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739682983165.45t4we30s.jpg"  data-type="auto">
 
-![](https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683049094.60udbwulzq.jpg)
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683002671.2rv9f974cu.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683002671.2rv9f974cu.jpg"  data-type="auto">
 
-{% image https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683071079.b910c08gn.jpg"图片描述" class:"responsive-image" data-type:"portrait" %}
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683049094.60udbwulzq.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683049094.60udbwulzq.jpg"  data-type="auto">
 
 #  我的博客
 
 ##  美观的视频播放器
 
 <!-- 视频示例 -->
+
 <div class="video-wrapper">
   <iframe src="https://holcc-cdn.haier.net/lemc/aliyun2/20250218/24231b38d28d470cb7d9a6e1cf2819f5.mp4" allowfullscreen=1></iframe>
 </div>
 
-![描述](https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683049094.60udbwulzq.jpg){:loading="lazy" class="responsive-image"}
 
 
+
+<img    src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg"     class="responsive-image click-to-zoom"   alt="描述文本"    loading="lazy"   data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg"            data-type="portrait"   >
+
+<img    src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"     class="responsive-image:click-to-zoom"   alt="描述文本"    loading="lazy"   data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"            data-type="auto"   >
+
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"  data-type="auto">  <!-- 通过属性扩展实现 --> 
+
+##  图片模板
+
+###### *==<!--<img    src="image.jpg"     class="responsive-image click-to-zoom" alt="文本"    loading="lazy"   data-fullsize="original.jpg"     data-type="portrait|landscape|auto"     -->==*
+
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg" class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg" data-type="l" >
 
