--- a/source/_posts/计算机网络-数据链路(一)8-30.md
+++ b/source/_posts/计算机网络-数据链路(一)8-30.md
@@ -13,7 +13,7 @@ categories: 机网
 
 * 数据链路层在五层协议的网络结构体系中处于第二层（自下而上）。
 
-![This is an image](./1/sex.png)
+<img src="./1/sex.png"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./1/sex.png"  data-type="auto">
 <!--more-->
 ##  链路、数据链路和帧
 
@@ -34,32 +34,32 @@ categories: 机网
    1. 帧的首部和尾部中包含着一些重要的控制信息。比如：目的地址、源地址、类型、FCS等。(不同类型的帧首部尾部所包含的可能不尽相同)
 
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/3.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/3.png)
    1. 帧的尾部和首部的作用之一就是帧定界。(有些没有帧定界，比如以太网V2的MAC帧发送每一个帧会有一个帧间间隔，以这个间隔作为鉴定一个帧，而不是以头部和尾部作为帧定界)
 
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/fzcz.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/fzcz.png)
 2. 透明传输：是指数据链路层对上层交付下来的协议单元PDU没有任何限制，就好像数据链路层不存在。
 
    
-![This is an image](./计算机网络-数据链路(一)8-30.md/fzcz.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/fzcz.png)
    1. 面向字节的物理链路使用的字节填充的方法实现透明传输，（一般原理方法）
 
       使用转义符，消除数据中的“敏感字符”（比如转义符、帧定界符）
 
       
-![This is an image](./计算机网络-数据链路(一)8-30.md/byte.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/byte.png)
    2. 面向比特的物理链路使用比特填充的方法实现透明传输。（一般原理方法）通过在五个连续的比特1后面加入比特0，来消除数据中帧定界符的影响。再向上层交付时删除比特0即可。
 
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/bite.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/bite.png)
    # 真题
 
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/12.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/12.png)
 
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/13.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/13.png)
    
 
 **差错检测**
@@ -71,27 +71,27 @@ categories: 机网
 #### **在帧的尾部放一个检错码用来检测是否出现误码**
 
 ​	1.奇偶校验
-![This is an image](./计算机网络-数据链路(一)8-30.md/jo.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/jo.png)
 
 ​	2.循环冗余校验
 
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/xunhuan.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/xunhuan.png)
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/xunhuan1.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/xunhuan1.png)
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/xunhuan2.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/xunhuan2.png)
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/xunhuan3.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/xunhuan3.png)
 例题:
 
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/xunhuan4.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/xunhuan4.png)
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/xunhuan5.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/xunhuan5.png)
 以上两种的差错检测只能检测差错不能定位差错
 
-![This is an image](./计算机网络-数据链路(一)8-30.md/xunhuan6.png)
+<img src="./计算机网络-数据链路(一"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="./计算机网络-数据链路(一"  data-type="auto">8-30.md/xunhuan6.png)
 **可靠传输**
 
 * 不可传输服务：直接丢弃有误码的帧
