--- a/source/_posts/白桃露露.md
+++ b/source/_posts/白桃露露.md
@@ -12,17 +12,17 @@ categories: 福利
 
 #  福利姬：白桃露露
 
-<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683035808.9kgb1pxbrn.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683035808.9kgb1pxbrn.jpg"  data-type="auto">
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683035808.9kgb1pxbrn.jpg"  class="responsive-image click-to-zoom" alt="" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683035808.9kgb1pxbrn.jpg"  data-type="auto">
 
 <!--more-->
 
-<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683013678.4ub23b5pe9.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683013678.4ub23b5pe9.jpg"  data-type="auto">
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683013678.4ub23b5pe9.jpg"  class="responsive-image click-to-zoom" alt="" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683013678.4ub23b5pe9.jpg"  data-type="auto">
 
-<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739682983165.45t4we30s.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739682983165.45t4we30s.jpg"  data-type="auto">
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739682983165.45t4we30s.jpg"  class="responsive-image click-to-zoom" alt="" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739682983165.45t4we30s.jpg"  data-type="auto">
 
-<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683002671.2rv9f974cu.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683002671.2rv9f974cu.jpg"  data-type="auto">
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683002671.2rv9f974cu.jpg"  class="responsive-image click-to-zoom" alt="" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683002671.2rv9f974cu.jpg"  data-type="auto">
 
-<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683049094.60udbwulzq.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683049094.60udbwulzq.jpg"  data-type="auto">
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683049094.60udbwulzq.jpg"  class="responsive-image click-to-zoom" alt="" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683049094.60udbwulzq.jpg"  data-type="auto">
 
 #  我的博客
 
@@ -37,15 +37,15 @@ categories: 福利
 
 
 
-<img    src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg"     class="responsive-image click-to-zoom"   alt="描述文本"    loading="lazy"   data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg"            data-type="portrait"   >
+<img    src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg"     class="responsive-image click-to-zoom"   alt=""    loading="lazy"   data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg"            data-type="portrait"   >
 
-<img    src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"     class="responsive-image:click-to-zoom"   alt="描述文本"    loading="lazy"   data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"            data-type="auto"   >
+<img    src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"     class="responsive-image:click-to-zoom"   alt=""    loading="lazy"   data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"            data-type="auto"   >
 
-<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"  class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"  data-type="auto">  <!-- 通过属性扩展实现 --> 
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"  class="responsive-image click-to-zoom" alt="" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/23.2obnlorw3s.jpg"  data-type="auto">  <!-- 通过属性扩展实现 --> 
 
 ##  图片模板
 
 ###### *==<!--<img    src="image.jpg"     class="responsive-image click-to-zoom" alt="文本"    loading="lazy"   data-fullsize="original.jpg"     data-type="portrait|landscape|auto"     -->==*
 
-<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg" class="responsive-image click-to-zoom" alt="描述文本" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg" data-type="l" >
+<img src="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg" class="responsive-image click-to-zoom" alt="" loading="lazy" data-fullsize="https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/hjebw/1.5tr5kmmake.jpg" data-type="l" >
 
