--- a/source/_posts/白桃露露.md
+++ b/source/_posts/白桃露露.md
@@ -30,10 +30,9 @@ categories: 福利
 
 <!-- 视频示例 -->
 
-<div class="video-wrapper">
-  <iframe src="https://holcc-cdn.haier.net/lemc/aliyun2/20250218/24231b38d28d470cb7d9a6e1cf2819f5.mp4" allowfullscreen=1></iframe>
-</div>
 
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;"> <video controls style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain;"><source src="https://holcc-cdn.haier.net/lemc/aliyun2/20250218/24231b38d28d470cb7d9a6e1cf2819f5.mp4" type="video/mp4">    </video> </div>
 
 
 
